[web] Make indications and sidebar controls sticky. Set scrollbar on correct elements (not body).

--- a/src/webui/src/sass/_general-layout.scss
+++ b/src/webui/src/sass/_general-layout.scss
@@ -15,6 +15,8 @@ body {
     background-color: hsl(0, 0, 100);
     line-height: 1.42857143;
     color: #333;
+    overflow: hidden;
+
 }
 .debug {
     font-size: 2em;
@@ -412,10 +414,13 @@ button {
     }
     .container {
         margin-left: 2rem;
-        margin-top: calc(#{$nav-bar-top-height});
-        margin-right: 2rem;
-        margin-bottom: 2.6rem;
+        padding-top: 2.5rem;
+        padding-right: 2rem;
+        padding-bottom: 2.5rem;
         width: 100%;
+        overflow: auto;
+        // IMPORTANT: max-height depends on the nav bar size (+ collision warning), and is dynamic. Therefore, it is set in javascript
+        // max-height: calc(100vh - #{$nav-bar-top-height} - #{$nav-bar-secondary-height} - #{$nav-bar-bottom-buttons-height});
     }
     .container.with-sidenavbar {
         margin-left: 9rem;
@@ -427,6 +432,7 @@ button {
         margin-left: 0;
         margin-right: 0;
         border-left: 1px dotted $blue-25;
+
     }
 
     // View specific stuff
@@ -435,9 +441,13 @@ button {
     }
     .overviewcontainer {
         display: flex;
+        max-height: calc(100vh - #{$nav-bar-top-height} - #{$nav-bar-secondary-height});
+        overflow: auto;
     }
 
     .dashboard {
+        max-height: calc(100vh - #{$nav-bar-top-height} - #{$nav-bar-secondary-height});
+        overflow:auto;
         display: flex;
         .full-title {
             padding-left: 1.2rem;
@@ -453,6 +463,7 @@ button {
             width: 32%;
             border: solid white 3px;
             background-color: $green-05;
+            height: 100%;
 
             .sb-title-container {
                 background-color: $green-25;
@@ -492,7 +503,6 @@ button {
 .single-sample-analysis-container {
     display: flex;
     flex-direction: row;
-    margin-right: 1.3rem;
 }
 .full-width {
     width: 100%;
@@ -737,14 +747,6 @@ workflow-buttons {
     h3:not(:first-child) {
         margin-top: 0.5rem;
     }
-}
-
-.nav-bottom-buttons-spacer {
-    height: calc(#{$nav-bar-bottom-buttons-height} + 0.8rem);
-}
-
-.nav-bottom-allelebar-spacer {
-    height: calc(#{$allelebar-row-height} + 0.8rem);
 }
 
 allelebar {
@@ -1350,14 +1352,23 @@ nav.warning {
     min-width: 45rem;
     position: sticky;
     margin-left: 1.3rem;
-    top: calc(#{$nav-bar-top-height} + #{$nav-bar-secondary-height} + 11rem);
-    margin-top: 4.5rem;
+    margin-top: 2.5rem;
+    padding-bottom: 4.5rem;
     overflow: auto;
     max-width: 100vw;
-    &.constrain-size {
-        max-height: calc(100vh - (#{$nav-bar-top-height} + #{$nav-bar-secondary-height} + 11rem));
-    }
+    // IMPORTANT: max-height depends on the nav bar size (+ collision warning), and is dynamic. Therefore, it is set on parent element in javascript
+    max-height: inherit;
+
     .controls {
+        position: sticky;
+        top: 0;
+        background: white;
+        padding-bottom: 0.3rem;
+        border-bottom: 2px solid $blue-10;
+        box-shadow: 0 0 0 3px $white;
+        z-index: 1;
+        margin-bottom: 0.3rem;
+
         .control-comment {
             max-width: 70rem;
             .wysiwygeditor {
